--- a/index.html
+++ b/index.html
@@ -325,31 +325,20 @@
         <div class="letter-header">From Now to Eternity - And Beyond</div>
         <div class="main-text">
           My love,<br />
-          You are more than any label could ever capture. Our bonding doesn't
-          need a tag or a name to define it. What we share goes beyond
-          definitions, beyond roles, beyond time itself. It feels eternal.
+          You are more than any label could ever define. What we share doesn't
+          need a name — it just feels real, safe, and true.
           <br />
-          With you, I don't have to pretend. I don't have to be strong all the
-          time. I don't have to filter my thoughts or hide my fears. I can say
-          anything. I can share everything. And that is the most precious thing
-          in the world to me.
+          With you, I can be completely myself. No pretending, no filters, no
+          pressure. Just honest, free, and understood. That comfort means
+          everything to me.
           <br />
-          From the day we started talking to now, I have always been myself with
-          you. Completely. Fully. Unfiltered. And you've accepted every version
-          of me - the strong one, the soft one, the confused one, the emotional
-          one, the silly one. I never had to become someone else to be loved by
-          you.
+          I love you for who you are, exactly as you are. Not for labels, not
+          for expectations, not even for closeness in the physical sense. I love
+          your soul with all my heart. I will always feel connected to you.
           <br />
-          That safety… that comfort… that freedom to just be me - that's what
-          makes us beyond every label.
+          And whatever this is called, I'm grateful for it.
           <br />
-          You are my safe place. My calm. My truth. My home.
-          <br />
-          And whatever this connection is called, I know one thing - it feels
-          like forever.
-          <br />
-          Yours,<br />
-          Pooja
+          Yours, Pooja 🤍
         </div>
       </div>
     </div>
