--- a/index.html
+++ b/index.html
@@ -322,22 +322,22 @@
 
     <div id="letter-container">
       <div class="clean-card">
-        <div class="letter-header">From Now to Eternity - And Beyond</div>
+        <!-- <div class="letter-header">From Now to Eternity - And Beyond</div> -->
         <div class="main-text">
-          My love,<br />
+          My love,<br /><br />
           You are more than any label could ever define. What we share doesn't
           need a name — it just feels real, safe, and true.
-          <br />
+          <br /><br />
           With you, I can be completely myself. No pretending, no filters, no
           pressure. Just honest, free, and understood. That comfort means
           everything to me.
-          <br />
+          <br /><br />
           I love you for who you are, exactly as you are. Not for labels, not
           for expectations, not even for closeness in the physical sense. I love
-          your soul with all my heart. I will always feel connected to you.
-          <br />
+          your soul with all my heart.
+          <br /><br />
           And whatever this is called, I'm grateful for it.
-          <br />
+          <br /><br />
           Yours, Pooja 🤍
         </div>
       </div>
