--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
           <br /><br />
           And whatever this is called, I'm grateful for it.
           <br /><br />
-          Yours, Pooja 🤍
+          Yours, Pooja :))
         </div>
       </div>
     </div>
